--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./components/footer.css" />
   </head>
   <body>
+    <!-- phần header -->
     <header class="header_top">
       <div id="topbar">
         <div class="topbar_content">
@@ -71,6 +72,7 @@
         </div>
       </div>
     </header>
+    <!-- kết thúc phần header -->
     <section class="img_banner">
       <div
         class="position-absolute slider-circle top-100 start-50 translate-middle"
@@ -191,25 +193,25 @@
       </section>
       <section class="banner_product">
         <div class="banner_flex">
-          <a href="#" class="show_more_product">
+          <a href="#">
             <div class="show_more_product img_item_1">
-              <p>Bộ Sưu Tập Mới</p>
-              <h2>2023</h2>
-              <button>xem thêm</button>
+              <p class="text_product">Bộ Sưu Tập Mới</p>
+              <h2 class="title_product">2023</h2>
+              <button class="submit_product">xem thêm</button>
             </div>
           </a>
           <a href="#">
             <div class="img_item_8 show_more_product">
-              <p>Bộ Sưu Tập Mới</p>
-              <h2>2023</h2>
-              <button>xem thêm</button>
+              <p class="text_product">Bộ Sưu Tập Mới</p>
+              <h2 class="title_product">2023</h2>
+              <button class="submit_product">xem thêm</button>
             </div>
           </a>
           <a href="#">
             <div class="img_item_8 show_more_product">
-              <p>Bộ Sưu Tập Mới</p>
-              <h2>2023</h2>
-              <button>xem thêm</button>
+              <p class="text_product">Bộ Sưu Tập Mới</p>
+              <h2 class="title_product">2023</h2>
+              <button class="submit_product">xem thêm</button>
             </div>
           </a>
         </div>
