--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfume</title>
+    <link rel="stylesheet" href="./assets/database.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./assets/database.css" />
+
     <link rel="stylesheet" href="./components/header.css" />
     <link rel="stylesheet" href="./assets/backgroundimg.css" />
     <link rel="stylesheet" href="./assets/main.css" />
@@ -270,6 +271,7 @@
         </div>
       </section>
     </footer>
+    <!-- kết thúc footer -->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
