--- a/admin/index.html
+++ b/admin/index.html
@@ -85,7 +85,6 @@
             <thead id="table_title">
               <tr>
                 <td>#</td>
-                <td>Username</td>
                 <td>Email</td>
                 <td>Full Name</td>
                 <td>Address</td>
@@ -93,8 +92,8 @@
                 <td>Action</td>
               </tr>
             </thead>
-            <tbody id="table_body">
-              <tr>
+            <tbody class="table_body_user" id="table_body">
+              <!-- <tr>
                 <td>number</td>
                 <td>tên tài khoản</td>
                 <td>email</td>
@@ -105,7 +104,7 @@
                   <button id="View">view</button
                   ><button id="Block">block</button>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
@@ -171,8 +170,8 @@
                 <td>Action</td>
               </tr>
             </thead>
-            <tbody id="table_body">
-              <tr>
+            <tbody class="table_body_product" id="table_body">
+              <!-- <tr>
                 <td>number</td>
                 <td>PR_001</td>
                 <td>sản phẩm 1</td>
@@ -183,7 +182,7 @@
                   <button id="View">view</button
                   ><button id="Block">block</button>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
@@ -212,8 +211,8 @@
                 <td>Action</td>
               </tr>
             </thead>
-            <tbody id="table_body">
-              <tr>
+            <tbody class="table_body_order" id="table_body">
+              <!-- <tr>
                 <td>number</td>
                 <td>ORDER_001</td>
                 <td>12/12/2012</td>
@@ -224,7 +223,7 @@
                   <button id="View">view</button
                   ><button id="Block">edit</button>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
