--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="header_user">
           <div class="icon">
-            <a href="./pages/history/history.html"><i class="ti-user"></i></a>
+            <a href="./pages/login/login.html"><i class="ti-user"></i></a>
           </div>
           <div class="icon">
             <a href="#"><i class="ti-search"></i></a>
