--- a/pages/detail/detail.html
+++ b/pages/detail/detail.html
@@ -85,7 +85,7 @@
           <span class="closeCart">X</span>
         </div>
         <div class="product">
-          <ul>
+          <!-- <ul>
             <li>
               <a href="#"
                 ><img src="../../assets/img/another13.jpg" alt=""
@@ -108,7 +108,7 @@
               <p>Giá tiền</p>
               <button class="icon_trash"><i class="ti-trash"></i></button>
             </li>
-          </ul>
+          </ul> -->
           <hr />
           <div class="sumTotal">
             <span>Tổng tiền</span>
@@ -205,4 +205,8 @@
   <script src="../../components/scroll.js"></script>
   <script src="../../models/modalCart.js"></script>
   <script src="./detail.js"></script>
+  <script>
+    RenderCart();
+  </script>
+  
 </html>
