--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -100,7 +100,7 @@
             <span>Bạn có (item) sản phẩm trong giỏ hàng</span>
           </div>
           <div class="product">
-            <ul>
+            <!-- <ul>
               <li>
                 <a href="trang chủ"
                   ><img src="../../assets/img/another13.jpg" alt=""
@@ -123,7 +123,7 @@
                 <p>Giá tiền</p>
                 <button class="icon_trash"><i class="ti-trash"></i></button>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
         <div class="cart_infor">
@@ -210,5 +210,8 @@
     crossorigin="anonymous"
   ></script>
   <script src="../../components/scroll.js"></script>
-  
+  <script src="./cart.js"></script>
+  <script>
+    RenderCart();
+  </script>
 </html>
