--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -211,7 +211,11 @@
   ></script>
   <script src="../../components/scroll.js"></script>
   <script src="./cart.js"></script>
+  <script src="../detail/detail.js"></script>
   <script>
     RenderCart();
+  </script>
+  <script>
+    renderBill();
   </script>
 </html>
