--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
             </figure> -->
           </div>
           <div class="show_more">
-            <button><a href="#">xem thêm</a></button>
+            <button>
+              <a href="./pages/products/Products.html">xem thêm</a>
+            </button>
           </div>
         </div>
       </section>
