--- a/pages/detail/detail.html
+++ b/pages/detail/detail.html
@@ -116,7 +116,11 @@
           </div>
           <div class="btn_pay-showcart">
             <span><button class="showcart">xem giỏ hàng</button></span>
-            <span><button class="pay">thanh toán</button></span>
+            <span
+              ><button onclick="" class="pay">
+                thanh toán
+              </button></span
+            >
           </div>
         </div>
       </div>
@@ -205,8 +209,11 @@
   <script src="../../components/scroll.js"></script>
   <script src="../../models/modalCart.js"></script>
   <script src="./detail.js"></script>
+  <script src="../../models/navitionDetail.js"></script>
   <script>
     RenderCart();
   </script>
-  <script>deleteProductCart()</script>
+  <script>
+    deleteProductCart();
+  </script>
 </html>
