--- a/index.html
+++ b/index.html
@@ -82,11 +82,9 @@
           <span class="closeCart">X</span>
         </div>
         <div class="product">
-          <ul>
+          <!-- <ul>
             <li>
-              <a href="#"
-                ><img src="../../assets/img/another13.jpg" alt=""
-              /></a>
+              <a href="#"><img src="./assets/img/another13.jpg" alt="" /></a>
             </li>
             <li>
               <a href="trang chủ">
@@ -115,7 +113,7 @@
             <span><button class="showcart">xem giỏ hàng</button></span>
             <span><button class="pay">thanh toán</button></span>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- kết thúc modal cart -->
@@ -358,11 +356,5 @@
   </script>
   <script>
     renderDetail();
-  </script>
-  <script>
-    addToCart();
-  </script>
-  <script>
-    renderCart();
   </script>
 </html>
