--- a/pages/detail/detail.html
+++ b/pages/detail/detail.html
@@ -48,16 +48,13 @@
         <div class="header_content">
           <ul>
             <li>
-              <a href="#">ưu đãi <i class="ti-angle-down"></i></a>
+              <a href="#">nước hoa</a>
             </li>
             <li>
-              <a href="#">nước hoa <i class="ti-angle-down"></i></a>
+              <a href="#">sản phẩm </a>
             </li>
             <li>
-              <a href="#">sản phẩm khác <i class="ti-angle-down"></i></a>
-            </li>
-            <li>
-              <a href="#">giới thiệu <i class="ti-angle-down"></i></a>
+              <a href="#">giới thiệu</a>
             </li>
             <li><a href="#">blog</a></li>
             <li><a href="#">liên hệ</a></li>
@@ -109,19 +106,15 @@
               <button class="icon_trash"><i class="ti-trash"></i></button>
             </li>
           </ul> -->
-          <hr />
+          <!-- <hr />
           <div class="sumTotal">
             <span>Tổng tiền</span>
             <span>Số tiền</span>
           </div>
           <div class="btn_pay-showcart">
             <span><button class="showcart">xem giỏ hàng</button></span>
-            <span
-              ><button onclick="" class="pay">
-                thanh toán
-              </button></span
-            >
-          </div>
+            <span><button onclick="" class="pay">thanh toán</button></span>
+          </div> -->
         </div>
       </div>
     </section>
@@ -210,10 +203,6 @@
   <script src="../../models/modalCart.js"></script>
   <script src="./detail.js"></script>
   <script src="../../models/navitionDetail.js"></script>
-  <script>
-    RenderCart();
-  </script>
-  <script>
-    deleteProductCart();
-  </script>
+ 
+
 </html>
