--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -48,16 +48,13 @@
         <div class="header_content">
           <ul>
             <li>
-              <a href="#">ưu đãi <i class="ti-angle-down"></i></a>
+              <a href="#">nước hoa</a>
             </li>
             <li>
-              <a href="#">nước hoa <i class="ti-angle-down"></i></a>
+              <a href="#">sản phẩm </a>
             </li>
             <li>
-              <a href="#">sản phẩm khác <i class="ti-angle-down"></i></a>
-            </li>
-            <li>
-              <a href="#">giới thiệu <i class="ti-angle-down"></i></a>
+              <a href="#">giới thiệu</a>
             </li>
             <li><a href="#">blog</a></li>
             <li><a href="#">liên hệ</a></li>
@@ -96,7 +93,7 @@
           </div>
           <div class="infor_foryou">
             <h5>thông tin đăng nhập</h5>
-            
+
             <ul class="infor">
               <!-- <li>Tên: trần viết duy hiệu</li>
               <li>
