--- a/pages/payment/Payment.html
+++ b/pages/payment/Payment.html
@@ -49,16 +49,13 @@
         <div class="header_content">
           <ul>
             <li>
-              <a href="#">ưu đãi <i class="ti-angle-down"></i></a>
+              <a href="#">nước hoa </a>
             </li>
             <li>
-              <a href="#">nước hoa <i class="ti-angle-down"></i></a>
+              <a href="#">sản phẩm</a>
             </li>
             <li>
-              <a href="#">sản phẩm khác <i class="ti-angle-down"></i></a>
-            </li>
-            <li>
-              <a href="#">giới thiệu <i class="ti-angle-down"></i></a>
+              <a href="#">giới thiệu </a>
             </li>
             <li><a href="#">blog</a></li>
             <li><a href="#">liên hệ</a></li>
@@ -99,7 +96,7 @@
             </ul>
           </div>
 
-          <form class="form_user">
+          <form class="form_user" onsubmit="addList(event)">
             <!-- <h5>Thông tin khách hàng</h5>
             <div id="input_name">
               <input type="text" placeholder="Họ và tên" />
