--- a/admin/login/login.html
+++ b/admin/login/login.html
@@ -21,9 +21,9 @@
       referrerpolicy="no-referrer"
     />
     <title>Đăng nhập</title>
-    <link rel="stylesheet" href="../../assets/database.css" />
     <link rel="stylesheet" href="../../components/header.css" />
     <link rel="stylesheet" href="../../components/footer.css" />
+    <link rel="stylesheet" href="../../assets/database.css" />
     <link rel="stylesheet" href="./login.css" />
   </head>
   <body>
@@ -38,57 +38,17 @@
         </div>
       </div>
     </header>
-    <header class="main_header">
-      <div class="header_transparent">
-        <div class="header_logo">
-          <a href="../../index.html"> <img src="../../assets/img/logo.webp" alt="" /></a>
-        </div>
-        <div class="header_content">
-          <ul>
-           
-            <li>
-              <a href="#">nước hoa</a>
-            </li>
-            <li>
-              <a href="#">sản phẩm</a>
-            </li>
-            <li>
-              <a href="#">giới thiệu</a>
-            </li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">liên hệ</a></li>
-          </ul>
-        </div>
-        <div class="header_user">
-          <div class="icon">
-            <a href="#"><i class="ti-user"></i></a>
-          </div>
-          <div class="icon">
-            <a href="#"><i class="ti-search"></i></a>
-          </div>
-          <div class="icon">
-            <a href="#"><i class="ti-shopping-cart"></i></a>
-          </div>
-        </div>
-      </div>
-    </header>
     <!-- kết thúc header -->
     <main class="mainContent">
       <div class="login">
         <div class="title_login">
           <h1>đăng nhập</h1>
-          <span class="hr"></span>
         </div>
         <div class="form_login">
-          <form onsubmit="handleLogin(event)">
+          <form onsubmit="handleLoginAdmin(event)">
             <input type="email" placeholder="Email" class="email" />
             <input type="password" placeholder="Mật Khẩu" class="password" />
             <button type="submit" class="button_login">đăng nhập</button>
-            <span class="misspassword"><a href="#">Quên mật khẩu ?</a></span>
-            <span>hoặc</span>
-            <span class="register"
-              ><a href="../register/register.html">Đăng ký</a></span
-            >
           </form>
         </div>
       </div>
@@ -148,16 +108,6 @@
       </section>
     </footer>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"
-  ></script>
-  <script src="../../components/scroll.js"></script>
   <script src="./login.js"></script>
+  
 </html>
