--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -48,16 +48,13 @@
         <div class="header_content">
           <ul>
             <li>
-              <a href="#">ưu đãi <i class="ti-angle-down"></i></a>
+              <a href="#">nước hoa </a>
             </li>
             <li>
-              <a href="#">nước hoa <i class="ti-angle-down"></i></a>
+              <a href="#">sản phẩm</a>
             </li>
             <li>
-              <a href="#">sản phẩm khác <i class="ti-angle-down"></i></a>
-            </li>
-            <li>
-              <a href="#">giới thiệu <i class="ti-angle-down"></i></a>
+              <a href="#">giới thiệu </a>
             </li>
             <li><a href="#">blog</a></li>
             <li><a href="#">liên hệ</a></li>
