--- a/pages/detail/detail.html
+++ b/pages/detail/detail.html
@@ -51,18 +51,20 @@
               <a href="#">nước hoa</a>
             </li>
             <li>
-              <a href="#">sản phẩm </a>
+              <a href="http://127.0.0.1:5501/pages/products/products.html"
+                >sản phẩm
+              </a>
             </li>
-            <li>
-              <a href="#">giới thiệu</a>
-            </li>
+            <!-- <li>
+              <a href="http://127.0.0.1:5501/pages/cart/cart.html">giỏ hàng</a>
+            </li> -->
             <li><a href="#">blog</a></li>
             <li><a href="#">liên hệ</a></li>
           </ul>
         </div>
         <div class="header_user">
-          <div class="icon">
-            <a href="#"><i class="ti-user"></i></a>
+          <div class="icon" id="account-header">
+            <!-- <a href="#"><i class="ti-user"></i></a> -->
           </div>
           <div class="icon">
             <a href="#"><i class="ti-search"></i></a>
@@ -203,6 +205,6 @@
   <script src="../../models/modalCart.js"></script>
   <script src="./detail.js"></script>
   <script src="../../models/navitionDetail.js"></script>
- 
-
+  <script src="../../utils/header.js"></script>
+  
 </html>
