--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -41,27 +41,30 @@
     <header class="main_header">
       <div class="header_transparent">
         <div class="header_logo">
-          <a href="../../index.html"> <img src="../../assets/img/logo.webp" alt="" /></a>
+          <a href="../../index.html">
+            <img src="../../assets/img/logo.webp" alt=""
+          /></a>
         </div>
         <div class="header_content">
           <ul>
-           
             <li>
               <a href="#">nước hoa</a>
             </li>
             <li>
-              <a href="#">sản phẩm</a>
+              <a href="http://127.0.0.1:5501/pages/products/products.html"
+                >sản phẩm</a
+              >
             </li>
-            <li>
+            <!-- <li>
               <a href="#">giới thiệu</a>
-            </li>
+            </li> -->
             <li><a href="#">blog</a></li>
             <li><a href="#">liên hệ</a></li>
           </ul>
         </div>
         <div class="header_user">
-          <div class="icon">
-            <a href="#"><i class="ti-user"></i></a>
+          <div class="icon" id="account-header">
+            <!-- <a href="#"><i class="ti-user"></i></a> -->
           </div>
           <div class="icon">
             <a href="#"><i class="ti-search"></i></a>
@@ -160,4 +163,5 @@
   ></script>
   <script src="../../components/scroll.js"></script>
   <script src="./login.js"></script>
+  <script src="../../utils/header.js"></script>
 </html>
