--- a/admin/index.html
+++ b/admin/index.html
@@ -21,7 +21,7 @@
     <title>Trang admin</title>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <section class="nav_header">
         <div class="nav_menu">
           <span>
@@ -40,7 +40,7 @@
           ></span>
         </div>
       </section>
-    </header>
+    </header> -->
     <aside class="sidebar">
       <ul class="renderAdmin">
         <li class="list-img"><img src="../assets/img/user.jpg" alt="" /></li>
@@ -50,28 +50,32 @@
         <li class="list-item">Users</li>
         <li class="list-item">Products</li>
         <li class="list-item">Orders</li>
-        <li class="list-item">Logout</li>
+        <li class="list-item" onclick="handleLogout()">Logout</li>
       </ul>
     </aside>
+
     <!-- thanh aside bên cạnh -->
     <main>
-      <section class="content">
+      <section class="content active">
         <div class="container">
           <div class="title">
             <h1>Dashboard</h1>
           </div>
           <div class="title_dashboard">
-            <div class="revenue">
-              <h3>Doanh thu</h3>
-              <p>Số tiền đã bán được hàng</p>
+            <div class="account">
+              <h3>Người dùng</h3>
+              <p>Số người dùng</p>
+              <p id="user-length"></p>
             </div>
             <div class="product">
-              <h3>Quản lý hàng hoá</h3>
-              <p>Số hàng đã được bán đi</p>
+              <h3>Sản phẩm</h3>
+              <p>Số lượng sản phẩm</p>
+              <p id="product-length"></p>
             </div>
             <div class="account">
-              <h3>Quản lý tài khoản</h3>
-              <p>Số tài khoản đã đăng ký</p>
+              <h3>Đơn hàng</h3>
+              <p>Số đơn hàng</p>
+              <p id="order-length"></p>
             </div>
           </div>
           <div class="comming">
@@ -122,7 +126,6 @@
                 <td>#</td>
                 <td>Email</td>
                 <td>Full Name</td>
-                <td>Address</td>
                 <td>Status</td>
                 <td>Action</td>
               </tr>
@@ -149,49 +152,108 @@
             <h1 class="h1_inline">List Of Admin</h1>
             <button class="new_admin">Add new Admin</button>
           </div>
-          <div>
+          <!-- <div>
             <input id="search_input" type="text" />
             <button id="search_button"><i class="ti-search"></i></button>
-          </div>
+          </div> -->
           <table>
             <thead id="table_title">
               <tr>
                 <td>#</td>
-                <td>Username</td>
                 <td>Email</td>
-                <td>Full Name</td>
-                <td>Address</td>
-                <td>Status</td>
-                <td>Action</td>
               </tr>
             </thead>
-            <tbody id="table_body">
-              <tr>
-                <td>number</td>
-                <td>tên tài khoản</td>
-                <td>email</td>
-                <td>tran viet dy hiu</td>
-                <td>đà nẵng</td>
-                <td>active</td>
-                <td>
-                  <button id="View">view</button
-                  ><button id="Block">block</button>
-                </td>
-              </tr>
-            </tbody>
+            <tbody class="table-body-admin" id="table_body"></tbody>
           </table>
         </div>
       </section>
       <!-- 1 section quản lý product -->
+
       <section class="content">
+        <section id="modal">
+          <h2>THÔNG TIN CỦA PRODUCT</h2>
+          <div class="modal_box">
+            <div class="modal_content">
+              <ul>
+                <label for="">tên sản phẩm</label>
+                <li><input id="name_Product" class="name" type="text" /></li>
+                <label for="">Giá sản phẩm</label>
+                <li><input id="price_Product" class="price" type="text" /></li>
+                <label for="">Kho hàng</label>
+                <li><input id="stock_Product" class="stock" type="text" /></li>
+
+                <li>
+                  <button class="saved" id="save" onclick="editProduct() ">
+                    Lưu
+                  </button>
+                  <button class="cancel" onclick="cancel()">Huỷ</button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section id="modal-add">
+          <h2>THÊM PRODUCT</h2>
+          <div class="modal_box">
+            <div class="modal_content">
+              <ul>
+                <label for="">Catagory</label>
+                <li><input id="add-catagory-product" class="id" type="text" /></li>
+
+                <label for="">tên sản phẩm</label>
+                <li>
+                  <input
+                    id="add-name-product"
+                    class="nameProduct"
+                    type="text"
+                  />
+                </li>
+                <label for="">Giá sản phẩm</label>
+                <li>
+                  <input
+                    id="add-price-product"
+                    class="priceProduct"
+                    type="text"
+                  />
+                </li>
+                <label for="">Số lượng hàng</label>
+                <li>
+                  <input
+                    id="add-stock-product"
+                    class="stockProduct"
+                    type="text"
+                  />
+                </li>
+                <label for="">Hình ảnh sản phẩm</label>
+                <li>
+                  <input
+                    id="add-image-product"
+                    type="file"
+                    class="imageProduct"
+                  />
+                </li>
+                <li>
+                  <button class="saved" id="save" onclick="addProduct() ">
+                    Lưu
+                  </button>
+                  <button class="cancel" onclick="cancelModalAdd()">Huỷ</button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
         <div class="container">
           <div class="container_admin">
             <h1 class="h1_inline">Product Management</h1>
-            <button class="new_admin">Add new Product</button>
+            <button class="new_admin" onclick="showModalAdd()">
+              Add new Product
+            </button>
           </div>
           <div>
-            <input id="search_input" type="text" />
-            <button id="search_button"><i class="ti-search"></i></button>
+            <input id="search_input_product" type="text" />
+            <button id="search_button_product" onclick="searchProduct()">
+              <i class="ti-search"></i>
+            </button>
           </div>
           <table>
             <thead id="table_title">
@@ -199,9 +261,9 @@
                 <td>#</td>
                 <td>Product_ID</td>
                 <td>Product Name</td>
+                <td>Product Image</td>
                 <td>Price</td>
                 <td>In stock</td>
-                <td>Quantaty Sold</td>
                 <td>Action</td>
               </tr>
             </thead>
@@ -227,22 +289,22 @@
       <section class="content">
         <div class="container">
           <div class="container_admin">
-            <h1 class="h1_inline">Products Management</h1>
-            <button class="new_admin">Add Products</button>
+            <h1 class="h1_inline">Orders Management</h1>
           </div>
           <div>
             <input id="search_input" type="text" />
-            <button id="search_button"><i class="ti-search"></i></button>
+            <button id="search_button">
+              <i class="ti-search"></i>
+            </button>
           </div>
           <table>
             <thead id="table_title">
               <tr>
                 <td>#</td>
-                <td>Order ID</td>
-                <td>Date</td>
-                <td>User Order</td>
-                <td>Total Order Value</td>
-                <td>Status</td>
+                <td>Address</td>
+                <td>Email</td>
+                <td>Fullname</td>
+                <td>Tel</td>
                 <td>Action</td>
               </tr>
             </thead>
@@ -266,7 +328,18 @@
       <!-- quản lý order -->
     </main>
   </body>
-  <script src="./java.js"></script>
+  <script src="./index.js"></script>
   <script src="../admin/login/login.js"></script>
   <script src="./account.js"></script>
+  <script>
+    renderProduct();
+    renderOrder();
+    renderUser();
+    renderDashboard();
+    function handleLogout() {
+      localStorage.removeItem("admin");
+      window.location.href = "./login/login.html";
+    }
+  </script>
+  <script src="./modalAdmin.js"></script>
 </html>
